--- a/CV.html
+++ b/CV.html
@@ -14,7 +14,7 @@
 
 
 
-<title>Resume</title>
+<title>CV.utf8</title>
 
 <script src="CV_files/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -286,7 +286,7 @@ div.tocify {
 </li>
 <li>
   <a href="geog176A.html">
-    <span class="fa fa-globe"></span>
+    <span class="fa fa-globe-americas"></span>
      
     Projects
   </a>
@@ -318,7 +318,6 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Resume</h1>
 
 </div>
 
@@ -355,95 +354,90 @@ div.tocify {
 <div id="relevant-experience" class="section level2">
 <h2><strong>RELEVANT EXPERIENCE</strong></h2>
 <hr />
-<ul>
-<li><h4 id="us-groundwater-research-santa-barbara-ca"><strong>US GROUNDWATER RESEARCH</strong>, Santa Barbara, CA</h4>
-<em>Research Assistant</em>, Professor Perrone, Debra <strong>(2019 - present)</strong>
+<div id="us-groundwater-research-santa-barbara-ca-research-assistant-professor-perrone-debra-2019---present" class="section level4">
+<h4><strong>US GROUNDWATER RESEARCH</strong>, Santa Barbara, CA<br/><em>Research Assistant</em>, Professor Perrone, Debra <strong>(2019 - present)</strong></h4>
 <ul>
 <li>Spatial and non spatial analysis in R using USGS and state groundwater data</li>
 <li>Focus on the analysis of groundwater well depths and pumping</li>
 <li>Analysis of the results of different state level sustainable groundwater management approaches</li>
-</ul></li>
 </ul>
 <p><br></p>
-<ul>
-<li><h4 id="flood-mapping-research-santa-barbara-ca"><strong>FLOOD MAPPING RESEARCH</strong>, Santa Barbara, CA</h4>
-<em>Research group member</em>, PhD candidate Johnson, Mike <strong>(2019 - present)</strong>
+</div>
+<div id="flood-mapping-research-santa-barbara-ca-research-group-member-phd-candidate-johnson-mike-2019---present" class="section level4">
+<h4><strong>FLOOD MAPPING RESEARCH</strong>, Santa Barbara, CA<br/><em>Research group member</em>, PhD candidate Johnson, Mike <strong>(2019 - present)</strong></h4>
 <ul>
 <li>Focus of this research is on mapping terrain based flood extents, specifically comparing known FEMA flood extents with a ‘bucket’ HAND model</li>
 <li>Analysis of different raster resolution levels to find the optimal balance between accurate representation of flood extents and computational processing time</li>
 <li>Goal of the research is to produce a continental flood map that can be used in real time for EMS</li>
-</ul></li>
 </ul>
 <p><br><br />
 <br></p>
+</div>
 </div>
 <div id="work-experience" class="section level2">
 <h2><strong>WORK EXPERIENCE</strong></h2>
 <hr />
-<ul>
-<li><h4 id="santa-barbara-running-santa-barbara-ca"><strong>SANTA BARBARA RUNNING</strong>, Santa Barbara, CA,</h4>
-<em>Sales Representative</em> <strong>(2019 - present)</strong>
+<div id="santa-barbara-running-santa-barbara-ca-sales-representative-2019---present" class="section level4">
+<h4><strong>SANTA BARBARA RUNNING</strong>, Santa Barbara, CA<br/><em>Sales Representative</em> <strong>(2019 - present)</strong></h4>
 <ul>
 <li>Provided information and options on shoes based on an individual’s goals and needs</li>
 <li>Comfortably multitask, ensuring optimal response to customers’ requests</li>
-</ul></li>
 </ul>
 <p><br></p>
-<ul>
-<li><h4 id="gallup-stribling-orchids-carpinteria-ca"><strong>GALLUP &amp; STRIBLING ORCHIDS</strong>, Carpinteria, CA</h4>
-<em>Sales Representative</em> <strong>(2018)</strong>
+</div>
+<div id="gallup-stribling-orchids-carpinteria-ca-sales-representative-2018" class="section level4">
+<h4><strong>GALLUP &amp; STRIBLING ORCHIDS</strong>, Carpinteria, CA<br/><em>Sales Representative</em> <strong>(2018)</strong></h4>
 <ul>
 <li>Provided exceptional customer service while processing phone orders</li>
 <li>Provided support during hectic Mother’s Day season</li>
 <li>Collaborated with the flower production floor and truck drivers receiving orders, maintaining clear communication between all parties</li>
-</ul></li>
 </ul>
 <p><br></p>
-<ul>
-<li><h4 id="the-garden-market-carpinteria-ca"><strong>THE GARDEN MARKET</strong>, Carpinteria, CA</h4>
-<em>Cashier &amp; Server</em> <strong>(2017)</strong>
+</div>
+<div id="the-garden-market-carpinteria-ca-cashier-server-2017" class="section level4">
+<h4><strong>THE GARDEN MARKET</strong>, Carpinteria, CA<br/><em>Cashier &amp; Server</em> <strong>(2017)</strong></h4>
 <ul>
 <li>Provided friendly and efficient customer service; striving to give customers a positive dining experience by attending to their needs promptly and enthusiastically</li>
-</ul></li>
 </ul>
 <p><br></p>
-<ul>
-<li><h4 id="soraa-inc.-goleta-ca"><strong>SORAA INC.</strong>, Goleta, CA,</h4>
-<em>Intern</em> <strong>(Spring 2015)</strong>
+</div>
+<div id="soraa-inc.-goleta-ca-intern-spring-2015" class="section level4">
+<h4><strong>SORAA INC.</strong>, Goleta, CA<br/><em>Intern</em> <strong>(Spring 2015)</strong></h4>
 <ul>
 <li>Gained an introduction into the production of GaN crystals used in LEDs and contributed in organizing data collected from GaN production runs in Excel files.</li>
-</ul></li>
 </ul>
 <p><br><br />
 <br></p>
 </div>
+</div>
 <div id="volunteering-experience" class="section level2">
 <h2><strong>VOLUNTEERING EXPERIENCE</strong></h2>
 <hr />
-<ul>
-<li><h4 id="santa-barbara-foodbanks-backyard-bounty"><strong>SANTA BARBARA FOODBANK’S BACKYARD BOUNTY</strong></h4>
-<p><em>Community Outreach &amp; volunteer fundraiser</em> <strong>(2014 – 2018)</strong></p>
+<div id="santa-barbara-foodbanks-backyard-bounty-community-outreach-volunteer-fundraiser-2014-2018" class="section level4">
+<h4><strong>SANTA BARBARA FOODBANK’S BACKYARD BOUNTY</strong><br/><em>Community Outreach &amp; volunteer fundraiser</em> <strong>(2014 – 2018)</strong></h4>
 <ul>
 <li>tasked with leading groups into local residences to harvest fruits and vegetables which are then distributed back to the community by the Foodbank.</li>
 </ul>
-<p><br></p></li>
-<li><h4 id="laguna-blanca-sports-drive"><strong>LAGUNA BLANCA SPORTS DRIVE</strong></h4>
-<p><em>Organizer</em> <strong>(2011-2015)</strong></p>
-<ul>
-<li>Organized and oversaw the collection of used sports equipment which were donated to the Goleta Boys &amp; Girls Club.</li>
-</ul></li>
-</ul>
 <p><br></p>
 </div>
-<div id="skills-additional-interests" class="section level2">
-<h2><strong>SKILLS + ADDITIONAL INTERESTS</strong></h2>
+<div id="laguna-blanca-sports-drive-organizer-2011-2015" class="section level4">
+<h4><strong>LAGUNA BLANCA SPORTS DRIVE</strong><br/><em>Organizer</em> <strong>(2011-2015)</strong></h4>
+<ul>
+<li>Organized and oversaw the collection of used sports equipment which were donated to the Goleta Boys &amp; Girls Club.</li>
+</ul>
+<p><br> <br></p>
+</div>
+</div>
+<div id="skills-interests" class="section level2">
+<h2><strong>SKILLS + INTERESTS</strong></h2>
 <hr />
+<div id="skills" class="section level5">
+<h5><strong>Skills:</strong></h5>
 <ul>
 <li>Proficient in Microsoft Word and Excel</li>
 <li>Proficient in Python and R coding languages
 <ul>
-<li>Strong abilities in using R as a platform for GIS and data analysis:
-<ul>
+<li>Experienced using R as a platform for GIS and data analysis:</li>
 <li>Able to clean, organize, aggregate, and analyze both spatial and non-spatial data</li>
 <li>Able to create visualization of spacial data in R</li>
 <li>Experienced in creating reproducible code and workflow in R</li>
@@ -452,17 +446,22 @@ div.tocify {
 <li>Able to create web sites in R using rmarkdown format and hosting by GitHub pages</li>
 <li><strong>GIS portfolio:</strong> <a href="https://anguswg-ucsb.github.io/geog176A.html" class="uri">https://anguswg-ucsb.github.io/geog176A.html</a></li>
 </ul></li>
-</ul></li>
+</ul>
+</div>
+<div id="interests" class="section level5">
+<h5><strong>Interests:</strong></h5>
+<ul>
 <li>I enjoy an active lifestyle (running, biking, swimming, rowing, kayaking), gardening, weeding, drawing, painting, spending time with animals, long walks on the beach</li>
 </ul>
 <p><br></p>
+</div>
 </div>
 <div id="references" class="section level2">
 <h2><strong>REFERENCES</strong></h2>
 <hr />
 <ul>
 <li>Mike Johnson, UCSB phD candidate, GIS instructor + Research Partner - <a href="mailto:jmj00@ucsb.edu" class="email">jmj00@ucsb.edu</a></li>
-<li>Debra Perrone, UCSB Bren School of ESM, Assistant Professor - <a href="mailto:perrone@ucsb.edu" class="email">perrone@ucsb.edu</a><br />
+<li>Debra Perrone, UCSB Bren School of ESM,rm Assistant Professor - <a href="mailto:perrone@ucsb.edu" class="email">perrone@ucsb.edu</a><br />
 </li>
 <li>Joe DeVreese, Santa Barbara Running – (805) 729-0138</li>
 <li>Sherrie Todd, The Garden Market – (805) 708-6428</li>
