--- a/CV.html
+++ b/CV.html
@@ -14,7 +14,7 @@
 
 
 
-<title>CV.utf8</title>
+<title>Resume</title>
 
 <script src="CV_files/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -318,6 +318,7 @@ div.tocify {
 
 
 
+<h1 class="title toc-ignore">Resume</h1>
 
 </div>
 
@@ -341,15 +342,21 @@ div.tocify {
 <div id="education" class="section level2">
 <h2><strong>EDUCATION</strong></h2>
 <hr />
-<ul>
-<li><h4 id="university-of-california-santa-barbara-2019-present-expected-graduation-spring-2021"><strong>UNIVERSITY OF CALIFORNIA, SANTA BARBARA –</strong> (2019 – present | Expected graduation Spring 2021)</h4>
+<div id="university-of-california-santa-barbara-2019-present-expected-graduation-spring-2021" class="section level4">
+<h4><strong>UNIVERSITY OF CALIFORNIA, SANTA BARBARA –</strong> (2019 – present | Expected graduation Spring 2021)</h4>
 <ul>
 <li><h5 id="b.a.-in-geography-with-an-emphasis-in-geographic-information-science-gpa-3.624.0"><em>B.A. in Geography with an Emphasis in Geographic Information Science (GPA: 3.62/4.0)</em></h5></li>
-</ul></li>
-<li><h4 id="santa-barbara-city-college-2016--2018"><strong>SANTA BARBARA CITY COLLEGE –</strong> (2016- 2018)</h4></li>
-<li><h4 id="laguna-blanca-school-graduated-2015"><strong>LAGUNA BLANCA SCHOOL –</strong> (Graduated 2015)</h4></li>
 </ul>
-<p><br> <br></p>
+<p><br></p>
+</div>
+<div id="santa-barbara-city-college-2016--2018" class="section level4">
+<h4><strong>SANTA BARBARA CITY COLLEGE –</strong> (2016- 2018)</h4>
+<p><br></p>
+</div>
+<div id="laguna-blanca-school-graduated-2015" class="section level4">
+<h4><strong>LAGUNA BLANCA SCHOOL –</strong> (Graduated 2015)</h4>
+<p>rmark <br> <br></p>
+</div>
 </div>
 <div id="relevant-experience" class="section level2">
 <h2><strong>RELEVANT EXPERIENCE</strong></h2>
@@ -453,7 +460,7 @@ div.tocify {
 <ul>
 <li>I enjoy an active lifestyle (running, biking, swimming, rowing, kayaking), gardening, weeding, drawing, painting, spending time with animals, long walks on the beach</li>
 </ul>
-<p><br></p>
+<p><br> <br></p>
 </div>
 </div>
 <div id="references" class="section level2">
