--- a/footer.html
+++ b/footer.html
@@ -25,6 +25,15 @@
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
+<style type="text/css">
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+      </style>
+
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
   pre:not([class]) {
@@ -282,7 +291,7 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="geog176A.html">
-    <span class="fa fa-globe"></span>
+    <span class="fa fa-globe-americas"></span>
      
     Projects
   </a>
@@ -377,7 +386,7 @@ h6 {
 }
 </style>
 
-<link rel="stylesheet" href="C:\Users\angus\OneDrive\Documents\R\win-library\4.0\mikedown\rmarkdown\templates\ucsb\resources\style.css" type="text/css" />
+<link rel="stylesheet" href="C:/Users/angus/OneDrive/Documents/R/win-library/4.0/mikedown/rmarkdown/templates/ucsb/resources/style.css" type="text/css" />
 
 </head>
 
@@ -600,7 +609,7 @@ div.tocify {
 </li>
 <li>
   <a href="geog176A.html">
-    <span class="fa fa-globe"></span>
+    <span class="fa fa-globe-americas"></span>
      
     Projects
   </a>
