--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ div.tocify {
 </li>
 <li>
   <a href="geog176A.html">
-    <span class="fa fa-globe"></span>
+    <span class="fa fa-globe-americas"></span>
      
     Projects
   </a>
