--- a/CV.html
+++ b/CV.html
@@ -351,10 +351,6 @@ div.tocify {
 </div>
 <div id="santa-barbara-city-college-2016--2018" class="section level4">
 <h4><strong>SANTA BARBARA CITY COLLEGE –</strong> (2016- 2018)</h4>
-<p><br></p>
-</div>
-<div id="laguna-blanca-school-graduated-2015" class="section level4">
-<h4><strong>LAGUNA BLANCA SCHOOL –</strong> (Graduated 2015)</h4>
 <p><br> <br></p>
 </div>
 </div>
@@ -417,8 +413,8 @@ div.tocify {
 <br></p>
 </div>
 </div>
-<div id="volunteering-experience" class="section level2">
-<h2><strong>VOLUNTEERING EXPERIENCE</strong></h2>
+<div id="volunteer-experience" class="section level2">
+<h2><strong>VOLUNTEER EXPERIENCE</strong></h2>
 <hr />
 <div id="santa-barbara-foodbanks-backyard-bounty-community-outreach-volunteer-fundraiser-2014-2018" class="section level4">
 <h4><strong>SANTA BARBARA FOODBANK’S BACKYARD BOUNTY</strong><br/><em>Community Outreach &amp; volunteer fundraiser</em> <strong>(2014 – 2018)</strong></h4>
@@ -427,8 +423,8 @@ div.tocify {
 </ul>
 <p><br></p>
 </div>
-<div id="laguna-blanca-sports-drive-organizer-2011-2015" class="section level4">
-<h4><strong>LAGUNA BLANCA SPORTS DRIVE</strong><br/><em>Organizer</em> <strong>(2011-2015)</strong></h4>
+<div id="laguna-blanca-sports-drive-volunteer-2011-2015" class="section level4">
+<h4><strong>LAGUNA BLANCA SPORTS DRIVE</strong><br/><em>Volunteer</em> <strong>(2011-2015)</strong></h4>
 <ul>
 <li>Organized and oversaw the collection of used sports equipment which were donated to the Goleta Boys &amp; Girls Club.</li>
 </ul>
@@ -446,7 +442,7 @@ div.tocify {
 <ul>
 <li>Experienced using R as a platform for GIS and data analysis:</li>
 <li>Able to clean, organize, aggregate, and analyze both spatial and non-spatial data</li>
-<li>Able to create visualization of spacial data in R</li>
+<li>Able to create visualization of spatial data in R</li>
 <li>Experienced in creating reproducible code and workflow in R</li>
 <li>Experienced working with large, ‘messy’ government data sets, shape files, and time series data</li>
 <li>Experienced in using GitHub to push and pull projects</li>
@@ -467,9 +463,9 @@ div.tocify {
 <h2><strong>REFERENCES</strong></h2>
 <hr />
 <ul>
-<li>Mike Johnson, UCSB phD candidate, GIS instructor + Research Partner - <a href="mailto:jmj00@ucsb.edu" class="email">jmj00@ucsb.edu</a></li>
-<li>Debra Perrone, UCSB Bren School of ESM,rm Assistant Professor - <a href="mailto:perrone@ucsb.edu" class="email">perrone@ucsb.edu</a><br />
+<li>Debra Perrone, UCSB Bren School of ESM, Assistant Professor - <a href="mailto:perrone@ucsb.edu" class="email">perrone@ucsb.edu</a><br />
 </li>
+<li>Mike Johnson, UCSB phD candidate, GIS instructor + Research Partner - <a href="mailto:jmj00@ucsb.edu" class="email">jmj00@ucsb.edu</a></li>
 <li>Joe DeVreese, Santa Barbara Running – (805) 729-0138</li>
 <li>Sherrie Todd, The Garden Market – (805) 708-6428</li>
 <li>Wayne Shizuman, Gallup &amp; Stribling Orchids LLC – <a href="mailto:wayne@gallup-stribling.com" class="email">wayne@gallup-stribling.com</a> – (805) 620-8443<br />
