personal website commit 12/16

--- a/geog176A.html
+++ b/geog176A.html
@@ -324,6 +324,11 @@ div.tocify {
 
 
 <hr />
+<p><a href="https://anguswg-ucsb.github.io/groundwater_2/index.html">US Groundwater research</a></p>
+<ul>
+<li>Work in progress</li>
+<li>Data source: <em>USGS National Water Information System</em></li>
+</ul>
 <p><br></p>
 <p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">COVID-19 Pandemic - Data Wrangling</a></p>
 <ul>
@@ -351,11 +356,6 @@ div.tocify {
 <li>In this project I used Open Street Map data to locate buildings and streams within a bounty box and then used Whitebox tools to analyze the terrain in the region.</li>
 </ul>
 <p><br></p>
-<p><a href="https://anguswg-ucsb.github.io/groundwater-research/gw_tmp.html">Arizona groundwater research</a></p>
-<ul>
-<li>Work in progress</li>
-<li>Data source: <em>USGS National Water Information System</em></li>
-</ul>
 
 
 
