--- a/CV.html
+++ b/CV.html
@@ -357,24 +357,63 @@ div.tocify {
 <div id="relevant-experience" class="section level2">
 <h2><strong>RELEVANT EXPERIENCE</strong></h2>
 <hr />
-<div id="us-groundwater-research-santa-barbara-ca-research-assistant-professor-perrone-debra-2019---present" class="section level4">
-<h4><strong>US GROUNDWATER RESEARCH</strong>, Santa Barbara, CA<br/><em>Research Assistant</em>, Professor Perrone, Debra <strong>(2019 - present)</strong></h4>
+<div id="us-groundwater-research-university-of-california-santa-barbara-ca-research-assistant-professor-perrone-debra-2019---present" class="section level4">
+<h4><strong>US GROUNDWATER RESEARCH</strong>, University of California, Santa Barbara, CA<br/><strong><em>Research assistant</em></strong>, Professor Perrone, Debra <strong>(2019 - present)</strong></h4>
 <ul>
-<li>Spatial and non spatial analysis in R using USGS and state groundwater data</li>
+<li>Analyzing spatial and non-spatial US Geological Survey and state groundwater data in R</li>
 <li>Focus on the analysis of groundwater well depths and pumping</li>
 <li>Analysis of the results of different state level sustainable groundwater management approaches</li>
 </ul>
 <p><br></p>
 </div>
-<div id="flood-mapping-research-santa-barbara-ca-research-group-member-phd-candidate-johnson-mike-2019---present" class="section level4">
-<h4><strong>FLOOD MAPPING RESEARCH</strong>, Santa Barbara, CA<br/><em>Research group member</em>, PhD candidate Johnson, Mike <strong>(2019 - present)</strong></h4>
+<div id="flood-mapping-research-university-of-california-santa-barbara-ca-research-assistant-phd-candidate-johnson-mike-2019---present" class="section level4">
+<h4><strong>FLOOD MAPPING RESEARCH</strong>, University of California, Santa Barbara, CA<br/><strong><em>Research assistant</em></strong>, PhD candidate Johnson, Mike <strong>(2019 - present)</strong></h4>
 <ul>
-<li>Focus of this research is on mapping terrain based flood extents, specifically comparing known FEMA flood extents with a ‘bucket’ HAND model</li>
-<li>Analysis of different raster resolution levels to find the optimal balance between accurate representation of flood extents and computational processing time</li>
-<li>Goal of the research is to produce a continental flood map that can be used in real time for EMS</li>
+<li>Mapping terrain-based flood extents, with the goal of produce a continental flood map that can be used in real time for Emergency Medical Services specifically comparing known FEMA flood extents with a ‘bucket’, Height Above Nearest Drainage model</li>
+<li>Comparison of known FEMA flood extents with a ‘bucket’ HAND model using raster data</li>
+</ul>
+<p><br></p>
+</div>
+<div id="instructional-assistant-university-of-california-santa-barbara-ca-envs-193-professor-perrone-debra-winter-2020" class="section level4">
+<h4><strong>INSTRUCTIONAL ASSISTANT</strong>, University of California, Santa Barbara, CA<br/><strong><em>ENVS 193</em></strong> Professor Perrone, Debra <strong>(Winter 2020)</strong></h4>
+<ul>
+<li>I am an instructional assistant in a class focused on teaching students how to organize, clean, manipulate and analyze large hydrological data sets using R</li>
+<li>With my expertise in R, I provide technical programming support, contribute to writing labs, and leading portions of labs</li>
 </ul>
 <p><br><br />
 <br></p>
+</div>
+</div>
+<div id="skills-interests" class="section level2">
+<h2><strong>SKILLS + INTERESTS</strong></h2>
+<hr />
+<div id="skills" class="section level5">
+<h5><strong>Skills:</strong></h5>
+<ul>
+<li>Experienced using R as a platform for GIS and data analysis:
+<ul>
+<li>Using <strong>dplyr</strong>, <strong>tidyr</strong>, <strong>ggplot2</strong>, <strong>sp</strong>, <strong>sf</strong>, and <strong>leaflet</strong> packages</li>
+<li>Cleaning, organizing, aggregating, and analyzing both spatial and non-spatial data</li>
+<li>Creating visualization of spatial data in R</li>
+<li>Creating reproducible code and workflow in R</li>
+<li>Working with large, ‘messy’ government data sets, shape files, and time series data</li>
+<li>Scrapping data from the web</li>
+<li>Working in GitHub repositories<br />
+</li>
+<li>Experienced working with large, ‘messy’ government data sets, shape files, and time series data</li>
+<li>Creating web sites in R using rmarkdown format and hosting by GitHub pages</li>
+<li>Creating shiny dashboard apps</li>
+<li><strong>GIS portfolio:</strong> <a href="https://anguswg-ucsb.github.io/geog176A.html" class="uri">https://anguswg-ucsb.github.io/geog176A.html</a></li>
+</ul></li>
+<li>Proficient in Microsoft Word and Excel</li>
+</ul>
+</div>
+<div id="interests" class="section level5">
+<h5><strong>Interests:</strong></h5>
+<ul>
+<li>I enjoy an active lifestyle (running, biking, swimming, rowing, kayaking), gardening, weeding, drawing, painting, spending time with animals, long walks on the beach</li>
+</ul>
+<p><br> <br></p>
 </div>
 </div>
 <div id="work-experience" class="section level2">
@@ -431,31 +470,28 @@ div.tocify {
 <p><br> <br></p>
 </div>
 </div>
-<div id="skills-interests" class="section level2">
+<div id="skills-interests-1" class="section level2">
 <h2><strong>SKILLS + INTERESTS</strong></h2>
 <hr />
-<div id="skills" class="section level5">
+<div id="skills-1" class="section level5">
 <h5><strong>Skills:</strong></h5>
 <ul>
-<li>Proficient in Microsoft Word and Excel</li>
-<li>Proficient in Python and R coding languages
+<li>Experienced using R as a platform for GIS and data analysis:
 <ul>
-<li>Proficient in dplyr, tidyr, and ggplot2 packages</li>
-<li>Experienced using R as a platform for GIS and data analysis:</li>
-<li>Able to clean, organize, aggregate, and analyze both spatial and non-spatial data</li>
-<li>Able to create visualization of spatial data in R</li>
-<li>Able to scrape data from html webpages</li>
-<li>Experienced in creating reproducible code and workflow in R</li>
+<li>Using dplyr, tidyr, ggplot2, sp, sf, and leaflet packages</li>
+<li>Cleaning, organizing, aggregating, and analyzing both spatial and non-spatial data</li>
+<li>Creating visualization of spatial data in R</li>
+<li>Creating reproducible code and workflow in R</li>
+<li>Working with large, ‘messy’ government data sets, shape files, and time series data</li>
+<li>Scrapping data from the web</li>
+<li>Working in GitHub repositories<br />
+</li>
 <li>Experienced working with large, ‘messy’ government data sets, shape files, and time series data</li>
-<li>Experienced in using GitHub to push and pull projects</li>
-<li>Able to create web sites in R using rmarkdown format and hosting by GitHub pages</li>
+<li>Creating web sites in R using rmarkdown format and hosting by GitHub pages</li>
+<li>Creating shiny dashboard apps</li>
 <li><strong>GIS portfolio:</strong> <a href="https://anguswg-ucsb.github.io/geog176A.html" class="uri">https://anguswg-ucsb.github.io/geog176A.html</a></li>
 </ul></li>
-</ul>
-</div>
-<div id="interests" class="section level5">
-<h5><strong>Interests:</strong></h5>
-<ul>
+<li>Proficient in Microsoft Word and Excel ##### <strong>Interests:</strong></li>
 <li>I enjoy an active lifestyle (running, biking, swimming, rowing, kayaking), gardening, weeding, drawing, painting, spending time with animals, long walks on the beach</li>
 </ul>
 <p><br> <br></p>
