--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ div.tocify {
 <h1>About me</h1>
 <hr />
 <div id="welcome-my-name-is-angus-watters-and-this-is-my-website" class="section level3">
-<h3><strong><em>Welcome!<br>My name is Angus Watters, and this is my website!</em></strong></h3>
+<h3><strong>Welcome!<br>My name is Angus Watters, and this is my website!</strong></h3>
 <p><br></p>
 <p>I am a senior at the University of California, Santa Barbara. I am majoring in Geography with an emphasis on GIS and I expect to graduate in the Spring of 2021. I am able to code in both Python and R. Within R I am proficient in cleaning, organizing, and analyzing spatial and non-spatial data. I am currently most interested in working in the field of water resources and environmental conservation, but I keep an open mind with the primary goal to continue growing.</p>
 <p>As I near graduation, I am searching for opportunities where I can both apply and improve my skills in cleaning, organizing, and analyzing spatial and non-spatial data. I hope to find a position which matches my interest in environmental conservation, resource management, and data curation.</p>
