--- a/geog176A.html
+++ b/geog176A.html
@@ -329,6 +329,11 @@ div.tocify {
 <li>Data source: <em>USGS National Water Information System</em></li>
 </ul>
 <p><br></p>
+<p><a href="https://angus-watters.shinyapps.io/groundwater-dash/">Shiny app - Arizona groundwater</a></p>
+<ul>
+<li>Data source: <em>USGS National Water Information System</em></li>
+</ul>
+<p><br></p>
 <p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">COVID-19 Pandemic - Data Wrangling</a></p>
 <ul>
 <li>In this project I organized, cleaned and manipulated US COVID-19 case and death data sourced from the NY Times.</li>
