--- a/geog176A.html
+++ b/geog176A.html
@@ -324,20 +324,32 @@ div.tocify {
 
 
 <hr />
-<p><a href="https://anguswg-ucsb.github.io/groundwater_2/index.html">US Groundwater research</a></p>
+<p><a href="https://angus-watters.shinyapps.io/covid-dashboard/">COVID-19 dashboard</a></p>
 <ul>
-<li>Data source: <em>USGS National Water Information System</em></li>
+<li><p>A R-Shiny dashboard tracking the COVID-19 pandemic in the US</p></li>
+<li><p>Independent project</p></li>
+<li><p>Built using R-Shiny dashboard</p></li>
 </ul>
 <p><br></p>
-<p><a href="https://angus-watters.shinyapps.io/groundwater-dash/">Shiny app - Arizona groundwater</a></p>
+<p><a href="https://angus-watters.shinyapps.io/groundwater-dash/">Shiny app - US groundwater research</a></p>
 <ul>
-<li>Data source: <em>USGS National Water Information System</em></li>
+<li><p>Groundwater research under <a href="https://www.es.ucsb.edu/debra-perrone">Dr. Perrone</a></p></li>
+<li><p>Built using R-Shiny dashboard</p></li>
+<li><p>Data source: <em>USGS National Water Information System</em></p></li>
+</ul>
+<p><br></p>
+<p><a href="https://anguswg-ucsb.github.io/groundwater_2/index.html">US Groundwater research</a></p>
+<ul>
+<li><p>Groundwater research under <a href="https://www.es.ucsb.edu/debra-perrone">Dr. Perrone</a></p></li>
+<li><p>This is the same investigative research as the above project but this is written up in an rmarkdown document and deployed using GitHub Pages</p></li>
+<li><p>Data source: <em>USGS National Water Information System</em></p></li>
 </ul>
 <p><br></p>
 <p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">COVID-19 Pandemic - Data Wrangling</a></p>
 <ul>
 <li>In this project I organized, cleaned and manipulated US COVID-19 case and death data sourced from the NY Times.</li>
 <li>In a ggplot I plotted daily new cases and daily new cases per capita for several states and I also overlaid a 7 day rolling mean.</li>
+<li>Written using rmarkdown and deployed using GitHub Pages</li>
 </ul>
 <p><br></p>
 <p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html">US Cities - Projections, Distances, and Mapping</a></p>
