--- a/index.html
+++ b/index.html
@@ -325,16 +325,14 @@ div.tocify {
 <div id="about-me" class="section level1">
 <h1>About me</h1>
 <hr />
-<div id="welcome-my-name-is-angus-watters-and-this-is-my-website" class="section level3">
-<h3><strong>Welcome!<br>My name is Angus Watters, and this is my website!</strong></h3>
+<div id="my-name-is-angus-watters-and-welcome-to-my-website" class="section level3">
+<h3><strong>My name is Angus Watters, and welcome to my website!</strong></h3>
 <p><br></p>
 <p>I am a senior at the University of California, Santa Barbara. I am majoring in Geography with an emphasis on GIS and I expect to graduate in the Spring of 2021. I am able to code in both Python and R. Within R I am proficient in cleaning, organizing, and analyzing spatial and non-spatial data. I am currently most interested in working in the field of water resources and environmental conservation, but I keep an open mind with the primary goal to continue growing.</p>
 <p>As I near graduation, I am searching for opportunities where I can both apply and improve my skills in cleaning, organizing, and analyzing spatial and non-spatial data. I hope to find a position which matches my interest in environmental conservation, resource management, and data curation.</p>
 <p>In my free time I enjoy spending time running, biking, drawing, gardening, and cooking.</p>
 <hr />
-<blockquote>
 <p><strong><code>Email: adwattersgrubstein@umail.ucsb.edu</code></strong><br><strong><code>GitHub: https://github.com/anguswg-ucsb</code></strong></p>
-</blockquote>
 <p><br></p>
 <center>
 <img src="UCSB-about-me.jpg" />
