--- a/CV.html
+++ b/CV.html
@@ -285,7 +285,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="geog176A.html">
+  <a href="projects.html">
     <span class="fas fa-globe-americas"></span>
      
     Projects
