--- a/projects.html
+++ b/projects.html
@@ -14,24 +14,24 @@
 
 
 
-<title>index.utf8</title>
+<title>Projects</title>
 
-<script src="index_files/jquery-1.11.3/jquery.min.js"></script>
+<script src="projects_files/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="index_files/bootstrap-3.3.5/css/lumen.min.css" rel="stylesheet" />
-<script src="index_files/bootstrap-3.3.5/js/bootstrap.min.js"></script>
-<script src="index_files/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
-<script src="index_files/bootstrap-3.3.5/shim/respond.min.js"></script>
-<script src="index_files/jqueryui-1.11.4/jquery-ui.min.js"></script>
-<link href="index_files/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
-<script src="index_files/tocify-1.9.1/jquery.tocify.js"></script>
-<script src="index_files/navigation-1.1/tabsets.js"></script>
-<script src="index_files/navigation-1.1/codefolding.js"></script>
-<script src="index_files/accessible-code-block-0.0.1/empty-anchor.js"></script>
-<link href="index_files/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
-<script src="index_files/pagedtable-1.1/js/pagedtable.js"></script>
-<link href="index_files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="index_files/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link href="projects_files/bootstrap-3.3.5/css/lumen.min.css" rel="stylesheet" />
+<script src="projects_files/bootstrap-3.3.5/js/bootstrap.min.js"></script>
+<script src="projects_files/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
+<script src="projects_files/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="projects_files/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="projects_files/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="projects_files/tocify-1.9.1/jquery.tocify.js"></script>
+<script src="projects_files/navigation-1.1/tabsets.js"></script>
+<script src="projects_files/navigation-1.1/codefolding.js"></script>
+<script src="projects_files/accessible-code-block-0.0.1/empty-anchor.js"></script>
+<link href="projects_files/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
+<script src="projects_files/pagedtable-1.1/js/pagedtable.js"></script>
+<link href="projects_files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
+<link href="projects_files/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 
 
@@ -318,27 +318,60 @@ div.tocify {
 
 
 
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<div id="about-me" class="section level1">
-<h1>About me</h1>
 <hr />
-<div id="my-name-is-angus-watters-and-welcome-to-my-website" class="section level3">
-<h3><strong>My name is Angus Watters, and welcome to my website!</strong></h3>
+<p><a href="https://angus-watters.shinyapps.io/covid-dashboard/">COVID-19 dashboard</a></p>
+<ul>
+<li><p>A R-Shiny dashboard tracking the COVID-19 pandemic in the US</p></li>
+<li><p>Independent project</p></li>
+<li><p>Built using R-Shiny dashboard</p></li>
+</ul>
 <p><br></p>
-<p>I am a senior at the University of California, Santa Barbara. I am majoring in Geography with an emphasis on GIS and I expect to graduate in the Spring of 2021. I am able to code in both Python and R. Within R I am proficient in cleaning, organizing, and analyzing spatial and non-spatial data. I am currently most interested in working in the field of water resources and environmental conservation, but I keep an open mind with the primary goal to continue growing.</p>
-<p>As I near graduation, I am searching for opportunities where I can both apply and improve my skills in cleaning, organizing, and analyzing spatial and non-spatial data. I hope to find a position which matches my interest in environmental conservation, resource management, and data curation.</p>
-<p>In my free time I enjoy spending time running, biking, drawing, gardening, and cooking.</p>
-<hr />
-<p><strong><code>Email: adwattersgrubstein@umail.ucsb.edu</code></strong><br><strong><code>GitHub: https://github.com/anguswg-ucsb</code></strong></p>
+<p><a href="https://angus-watters.shinyapps.io/groundwater-dash/">Shiny app - US groundwater research</a></p>
+<ul>
+<li><p>Groundwater research under <a href="https://www.es.ucsb.edu/debra-perrone">Dr. Perrone</a></p></li>
+<li><p>Built using R-Shiny dashboard</p></li>
+<li><p>Data source: <em>USGS National Water Information System</em></p></li>
+</ul>
 <p><br></p>
-<center>
-<img src="UCSB-about-me.jpg" />
-</center>
-</div>
-</div>
+<p><a href="https://anguswg-ucsb.github.io/groundwater_2/index.html">US Groundwater research</a></p>
+<ul>
+<li><p>Groundwater research under <a href="https://www.es.ucsb.edu/debra-perrone">Dr. Perrone</a></p></li>
+<li><p>This is the same investigative research as the above project but this is written up in an rmarkdown document and deployed using GitHub Pages</p></li>
+<li><p>Data source: <em>USGS National Water Information System</em></p></li>
+</ul>
+<p><br></p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">COVID-19 Pandemic - Data Wrangling</a></p>
+<ul>
+<li>In this project I organized, cleaned and manipulated US COVID-19 case and death data sourced from the NY Times.</li>
+<li>In a ggplot I plotted daily new cases and daily new cases per capita for several states and I also overlaid a 7 day rolling mean.</li>
+<li>Written using rmarkdown and deployed using GitHub Pages</li>
+</ul>
+<p><br></p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html">US Cities - Projections, Distances, and Mapping</a></p>
+<ul>
+<li>In this project I took US cities and borders, created Sf objects, and then performed spatial analysis.</li>
+</ul>
+<p><br></p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-04.html">US dams - Tesselations, Spatial Joins, and Point-in-Polygon</a></p>
+<ul>
+<li>In this project I formed several tessellations over the US and then performed PIP analysis on dam locations within the US.</li>
+</ul>
+<p><br></p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-05.html">Palo, Iowa Flood - Rasters analysis and Remote Sensing</a></p>
+<ul>
+<li>In this project I worked with rasters, RGB color varients, landsat images, and performed a kmeans analysis to visualize regions were flooding has occurred.</li>
+</ul>
+<p><br></p>
+<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-06.html">Santa Barbara, CA Mission Creek Flood - Terrain Analysis</a></p>
+<ul>
+<li>In this project I used Open Street Map data to locate buildings and streams within a bounty box and then used Whitebox tools to analyze the terrain in the region.</li>
+</ul>
+<p><br></p>
 
 
 
