--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,6 @@
 <script src="projects_files/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="projects_files/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="projects_files/bootstrap-3.3.5/shim/respond.min.js"></script>
-<script src="projects_files/jqueryui-1.11.4/jquery-ui.min.js"></script>
-<link href="projects_files/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
-<script src="projects_files/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="projects_files/navigation-1.1/tabsets.js"></script>
 <script src="projects_files/navigation-1.1/codefolding.js"></script>
 <script src="projects_files/accessible-code-block-0.0.1/empty-anchor.js"></script>
@@ -167,102 +164,6 @@ $(document).ready(function () {
 
 
 
-<script>
-$(document).ready(function ()  {
-
-    // move toc-ignore selectors from section div to header
-    $('div.section.toc-ignore')
-        .removeClass('toc-ignore')
-        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
-
-    // establish options
-    var options = {
-      selectors: "h1,h2,h3",
-      theme: "bootstrap3",
-      context: '.toc-content',
-      hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
-      },
-      ignoreSelector: ".toc-ignore",
-      scrollTo: 0
-    };
-    options.showAndHide = true;
-    options.smoothScroll = true;
-
-    // tocify
-    var toc = $("#TOC").tocify(options).data("toc-tocify");
-});
-</script>
-
-<style type="text/css">
-
-#TOC {
-  margin: 25px 0px 20px 0px;
-}
-@media (max-width: 768px) {
-#TOC {
-  position: relative;
-  width: 100%;
-}
-}
-
-
-.toc-content {
-  padding-left: 30px;
-  padding-right: 40px;
-}
-
-div.main-container {
-  max-width: 1200px;
-}
-
-div.tocify {
-  width: 20%;
-  max-width: 260px;
-  max-height: 85%;
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  div.tocify {
-    width: 25%;
-  }
-}
-
-@media (max-width: 767px) {
-  div.tocify {
-    width: 100%;
-    max-width: none;
-  }
-}
-
-.tocify ul, .tocify li {
-  line-height: 20px;
-}
-
-.tocify-subheader .tocify-item {
-  font-size: 0.90em;
-  padding-left: 25px;
-  text-indent: 0;
-}
-
-.tocify .list-group-item {
-  border-radius: 0px;
-}
-
-
-</style>
-
-<!-- setup 3col/9col grid for toc_float and main content  -->
-<div class="row-fluid">
-<div class="col-xs-12 col-sm-4 col-md-3">
-<div id="TOC" class="tocify">
-    <img style="margin-bottom: 20px" src="https://github.com/mikejohnson51/mikedown/raw/master/inst/rmarkdown/templates/ucsb/resources/ucsb-navy-white.png" alt="logo">
-</div>
-</div>
-
-<div class="toc-content col-xs-12 col-sm-8 col-md-9">
-
-
 
 
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
@@ -324,54 +225,90 @@ div.tocify {
 
 
 <hr />
-<p><a href="https://angus-watters.shinyapps.io/covid-dashboard/">COVID-19 dashboard</a></p>
+<div id="covid-19" class="section level3">
+<h3><strong><a href="https://angus-watters.shinyapps.io/covid-dashboard/">COVID-19</a></strong></h3>
 <ul>
-<li><p>A R-Shiny dashboard tracking the COVID-19 pandemic in the US</p></li>
+<li><p>Built using R-Shiny dashboard</p></li>
+<li><p>Tracking the COVID-19 pandemic in the United States</p></li>
+<li><p>Built using R-Shiny dashboard</p></li>
 <li><p>Independent project</p></li>
+<li><p>Data source: <a href="https://github.com/nytimes/covid-19-data">New York Times</a></p></li>
+</ul>
+<p><br></p>
+<center>
+<img src="img/covid_shiny_v2.png" />
+</center>
+<p><br> <br> <br></p>
+</div>
+<div id="usgs-groundwater" class="section level3">
+<h3><strong><a href="https://angus-watters.shinyapps.io/groundwater-dash/">USGS Groundwater</a></strong></h3>
+<ul>
 <li><p>Built using R-Shiny dashboard</p></li>
-</ul>
-<p><br></p>
-<p><a href="https://angus-watters.shinyapps.io/groundwater-dash/">Shiny app - US groundwater research</a></p>
-<ul>
 <li><p>Groundwater research under <a href="https://www.es.ucsb.edu/debra-perrone">Dr. Perrone</a></p></li>
-<li><p>Built using R-Shiny dashboard</p></li>
-<li><p>Data source: <em>USGS National Water Information System</em></p></li>
+<li><p>Data source: <a href="https://waterdata.usgs.gov/nwis">USGS National Water Information System</a></p></li>
 </ul>
 <p><br></p>
-<p><a href="https://anguswg-ucsb.github.io/groundwater_2/index.html">US Groundwater research</a></p>
+<center>
+<img src="img/groundwater_shiny.png" />
+</center>
+<p><br><br />
+<br> <br></p>
+</div>
+<div id="usgs-groundwater-1" class="section level3">
+<h3><strong><a href="https://anguswg-ucsb.github.io/groundwater_2/index.html">USGS Groundwater</a></strong></h3>
 <ul>
+<li><p>R Markdown</p></li>
 <li><p>Groundwater research under <a href="https://www.es.ucsb.edu/debra-perrone">Dr. Perrone</a></p></li>
-<li><p>This is the same investigative research as the above project but this is written up in an rmarkdown document and deployed using GitHub Pages</p></li>
-<li><p>Data source: <em>USGS National Water Information System</em></p></li>
+<li><p>Identical data and research shown in the USGS Groundwater Shiny dashboard project but this is written up in an rmarkdown document and deployed using GitHub Pages</p></li>
+<li><p>Data source: <a href="https://waterdata.usgs.gov/nwis">USGS National Water Information System</a></p></li>
 </ul>
 <p><br></p>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">COVID-19 Pandemic - Data Wrangling</a></p>
+</div>
+<div id="us-dams" class="section level3">
+<h3><strong><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-04.html">US dams</a></strong></h3>
 <ul>
-<li>In this project I organized, cleaned and manipulated US COVID-19 case and death data sourced from the NY Times.</li>
-<li>In a ggplot I plotted daily new cases and daily new cases per capita for several states and I also overlaid a 7 day rolling mean.</li>
-<li>Written using rmarkdown and deployed using GitHub Pages</li>
+<li><p>R Markdown</p></li>
+<li><p>In this project I formed several tessellations over the US and then performed PIP analysis on dam locations within the US.</p></li>
+<li><p>Methods used: Tesselations, Spatial Joins, Point-in-Polygon analysis, MAUP simplification</p></li>
+<li><p>Data source: <a href="https://nid.sec.usace.army.mil/ords/f?p=105:1::::::">National Dam Inventory, US Army Corps of Engineers</a></p></li>
 </ul>
 <p><br></p>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html">US Cities - Projections, Distances, and Mapping</a></p>
+</div>
+<div id="palo-iowa-flood---rasters-analysis-and-remote-sensing" class="section level3">
+<h3><strong><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-05.html">Palo, Iowa Flood - Rasters analysis and Remote Sensing</a></strong></h3>
 <ul>
-<li>In this project I took US cities and borders, created Sf objects, and then performed spatial analysis.</li>
+<li><p>R Markdown</p></li>
+<li><p>In this project I worked with rasters, RGB color variants, landsat images, and performed a K-means analysis to visualize regions were flooding has occurred.</p></li>
+<li><p>Methods: Landsat raster extraction, Clustering, K-means analysis</p></li>
 </ul>
 <p><br></p>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-04.html">US dams - Tesselations, Spatial Joins, and Point-in-Polygon</a></p>
+</div>
+<div id="santa-barbara-ca-mission-creek-flood---terrain-analysis" class="section level3">
+<h3><strong><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-06.html">Santa Barbara, CA Mission Creek Flood - Terrain Analysis</a></strong></h3>
 <ul>
-<li>In this project I formed several tessellations over the US and then performed PIP analysis on dam locations within the US.</li>
+<li><p>R Markdown</p></li>
+<li><p>In this project I used Open Street Map data to locate buildings and streams within a bounty box and then used Whitebox tools to analyze the terrain in the region.</p></li>
+<li><p>Data source: <a href="https://waterdata.usgs.gov/nwis">USGS National Water Information System</a></p></li>
 </ul>
 <p><br></p>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-05.html">Palo, Iowa Flood - Rasters analysis and Remote Sensing</a></p>
+</div>
+<div id="covid-19-pandemic---data-wrangling" class="section level3">
+<h3><strong><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">COVID-19 Pandemic - Data Wrangling</a></strong></h3>
 <ul>
-<li>In this project I worked with rasters, RGB color varients, landsat images, and performed a kmeans analysis to visualize regions were flooding has occurred.</li>
+<li><p>R Markdown</p></li>
+<li><p>Identical data and research shown in the COVID-19 Shiny dashboard project but written up in an rmarkdown document and deployed using GitHub Pages</p></li>
+<li><p>Data source: <a href="https://github.com/nytimes/covid-19-data">New York Times</a></p></li>
 </ul>
 <p><br></p>
-<p><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-06.html">Santa Barbara, CA Mission Creek Flood - Terrain Analysis</a></p>
+</div>
+<div id="us-cities---projections-distances-and-mapping" class="section level3">
+<h3><strong><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-03.html">US Cities - Projections, Distances, and Mapping</a></strong></h3>
 <ul>
-<li>In this project I used Open Street Map data to locate buildings and streams within a bounty box and then used Whitebox tools to analyze the terrain in the region.</li>
+<li><p>R Markdown</p></li>
+<li><p>In this project I took US cities and borders, created Sf objects, and then performed spatial analysis.</p></li>
 </ul>
 <p><br></p>
+</div>
 
 
 
@@ -383,8 +320,6 @@ div.tocify {
 &nbsp;
 
 
-</div>
-</div>
 
 </div>
 
