--- a/CV.html
+++ b/CV.html
@@ -324,19 +324,19 @@ div.tocify {
 
 
 <hr />
-<p><br></p>
 <div id="angus-watters" class="section level1">
 <h1><strong>ANGUS WATTERS</strong></h1>
 <div id="ben-lomond-dr.-santa-barbara-ca-93105-805.895.1590-adwattersgrubsteinucsb.edu" class="section level4">
 <h4>2786 Ben Lomond Dr. Santa Barbara, CA 93105| 805.895.1590| <a href="mailto:adwattersgrubstein@ucsb.edu" class="email">adwattersgrubstein@ucsb.edu</a></h4>
-<p><br> <br> <br> <br></p>
+<p><br> <br></p>
 </div>
 <div id="work-objective" class="section level2">
 <h2><strong>WORK OBJECTIVE</strong></h2>
 <hr />
 <div id="i-am-a-senior-expecting-to-graduate-in-the-spring-of-2021-with-a-b.a.-in-geography-with-an-emphasis-on-gis-at-the-university-of-california-santa-barbara.-i-am-looking-for-a-position-to-utilize-my-responsible-work-ethic-and-enthusiasm-for-learning.-i-am-a-quick-learner-ready-and-willing-to-take-training-for-any-position.-i-have-a-thirst-for-knowledge-and-look-forward-to-continued-growth-after-graduation.-i-believe-to-be-a-responsible-employee-one-must-tackle-every-task-with-diligence-and-care." class="section level4">
 <h4>I am a senior expecting to graduate in the Spring of 2021 with a B.A. in Geography with an emphasis on GIS at the University of California, Santa Barbara. I am looking for a position to utilize my responsible work ethic and enthusiasm for learning. I am a quick learner; ready and willing to take training for any position. I have a thirst for knowledge and look forward to continued growth after graduation. I believe to be a responsible employee one must tackle every task with diligence and care.</h4>
-<p><br> <br></p>
+<p><br> <br><br />
+<br></p>
 </div>
 </div>
 <div id="education" class="section level2">
@@ -351,14 +351,15 @@ div.tocify {
 </div>
 <div id="santa-barbara-city-college-2016--2018" class="section level4">
 <h4><strong>SANTA BARBARA CITY COLLEGE –</strong> (2016- 2018)</h4>
-<p><br> <br></p>
+<p><br> <br><br />
+<br></p>
 </div>
 </div>
 <div id="relevant-experience" class="section level2">
 <h2><strong>RELEVANT EXPERIENCE</strong></h2>
 <hr />
 <div id="us-groundwater-research-university-of-california-santa-barbara-ca-research-assistant-professor-perrone-debra-2019---present" class="section level4">
-<h4><strong>US GROUNDWATER RESEARCH</strong>, University of California, Santa Barbara, CA<br/><strong><em>Research assistant</em></strong>, Professor Perrone, Debra <strong>(2019 - present)</strong></h4>
+<h4><strong>US GROUNDWATER RESEARCH</strong>, University of California, Santa Barbara, CA<br/><strong><em>Research assistant</em></strong>, <a href="https://www.es.ucsb.edu/debra-perrone">Professor Perrone, Debra</a> <strong>(2019 - present)</strong></h4>
 <ul>
 <li>Analyzing spatial and non-spatial US Geological Survey and state groundwater data in R</li>
 <li>Focus on the analysis of groundwater well depths and pumping</li>
@@ -366,22 +367,21 @@ div.tocify {
 </ul>
 <p><br></p>
 </div>
-<div id="flood-mapping-research-university-of-california-santa-barbara-ca-research-assistant-phd-candidate-johnson-mike-2019---present" class="section level4">
-<h4><strong>FLOOD MAPPING RESEARCH</strong>, University of California, Santa Barbara, CA<br/><strong><em>Research assistant</em></strong>, PhD candidate Johnson, Mike <strong>(2019 - present)</strong></h4>
+<div id="flood-mapping-research-university-of-california-santa-barbara-ca-research-assistant-mike-johnson-ucsb-phd-candidate-2020---present" class="section level4">
+<h4><strong>FLOOD MAPPING RESEARCH</strong>, University of California, Santa Barbara, CA<br/><strong><em>Research assistant</em></strong>, <a href="https://mikejohnson51.github.io/">Mike Johnson, UCSB PhD candidate</a> <strong>(2020 - present)</strong></h4>
 <ul>
 <li>Mapping terrain-based flood extents, with the goal of produce a continental flood map that can be used in real time for Emergency Medical Services specifically comparing known FEMA flood extents with a ‘bucket’, Height Above Nearest Drainage model</li>
 <li>Comparison of known FEMA flood extents with a ‘bucket’ HAND model using raster data</li>
 </ul>
 <p><br></p>
 </div>
-<div id="instructional-assistant-university-of-california-santa-barbara-ca-envs-193-professor-perrone-debra-winter-2020" class="section level4">
-<h4><strong>INSTRUCTIONAL ASSISTANT</strong>, University of California, Santa Barbara, CA<br/><strong><em>ENVS 193</em></strong> Professor Perrone, Debra <strong>(Winter 2020)</strong></h4>
+<div id="instructional-assistant-university-of-california-santa-barbara-ca-envs-193-profesor-perrone-debra-winter-quarter-2021" class="section level4">
+<h4><strong>INSTRUCTIONAL ASSISTANT</strong>, University of California, Santa Barbara, CA<br/><strong><em>ENVS 193</em></strong> <a href="https://www.es.ucsb.edu/debra-perrone">Profesor Perrone, Debra</a> <strong>(Winter Quarter 2021)</strong></h4>
 <ul>
 <li>I am an instructional assistant in a class focused on teaching students how to organize, clean, manipulate and analyze large hydrological data sets using R</li>
-<li>With my expertise in R, I provide technical programming support, contribute to writing labs, and leading portions of labs</li>
+<li>With my expertise in R, I provide technical programming support, contribute to writing labs, and leading portions of labs <br><br />
+<br> <br> <br></li>
 </ul>
-<p><br><br />
-<br></p>
 </div>
 </div>
 <div id="skills-interests" class="section level2">
@@ -392,7 +392,7 @@ div.tocify {
 <ul>
 <li>Experienced using R as a platform for GIS and data analysis:
 <ul>
-<li>Using <strong>dplyr</strong>, <strong>tidyr</strong>, <strong>ggplot2</strong>, <strong>sp</strong>, <strong>sf</strong>, and <strong>leaflet</strong> packages</li>
+<li>Using <strong>dplyr</strong>, <strong>tidyr</strong>, <strong>ggplot2</strong>, <strong>sp</strong>, <strong>sf</strong>, <strong>shiny</strong>, and <strong>leaflet</strong> packages</li>
 <li>Cleaning, organizing, aggregating, and analyzing both spatial and non-spatial data</li>
 <li>Creating visualization of spatial data in R</li>
 <li>Creating reproducible code and workflow in R</li>
@@ -402,10 +402,11 @@ div.tocify {
 </li>
 <li>Experienced working with large, ‘messy’ government data sets, shape files, and time series data</li>
 <li>Creating web sites in R using rmarkdown format and hosting by GitHub pages</li>
-<li>Creating shiny dashboard apps</li>
-<li><strong>GIS portfolio:</strong> <a href="https://anguswg-ucsb.github.io/geog176A.html" class="uri">https://anguswg-ucsb.github.io/geog176A.html</a></li>
+<li>Creating Shiny dashboard apps</li>
+<li><a href="https://anguswg-ucsb.github.io/projects.html"><strong>Data science portfolio</strong></a></li>
 </ul></li>
 <li>Proficient in Microsoft Word and Excel</li>
+<li>Experienced using ArcGIS Pro</li>
 </ul>
 </div>
 <div id="interests" class="section level5">
@@ -413,7 +414,7 @@ div.tocify {
 <ul>
 <li>I enjoy an active lifestyle (running, biking, swimming, rowing, kayaking), gardening, weeding, drawing, painting, spending time with animals, long walks on the beach</li>
 </ul>
-<p><br> <br></p>
+<p><br> <br> <br></p>
 </div>
 </div>
 <div id="work-experience" class="section level2">
@@ -449,7 +450,7 @@ div.tocify {
 <li>Gained an introduction into the production of GaN crystals used in LEDs and contributed in organizing data collected from GaN production runs in Excel files.</li>
 </ul>
 <p><br><br />
-<br></p>
+<br> <br></p>
 </div>
 </div>
 <div id="volunteer-experience" class="section level2">
@@ -467,34 +468,7 @@ div.tocify {
 <ul>
 <li>Organized and oversaw the collection of used sports equipment which were donated to the Goleta Boys &amp; Girls Club.</li>
 </ul>
-<p><br> <br></p>
-</div>
-</div>
-<div id="skills-interests-1" class="section level2">
-<h2><strong>SKILLS + INTERESTS</strong></h2>
-<hr />
-<div id="skills-1" class="section level5">
-<h5><strong>Skills:</strong></h5>
-<ul>
-<li>Experienced using R as a platform for GIS and data analysis:
-<ul>
-<li>Using dplyr, tidyr, ggplot2, sp, sf, and leaflet packages</li>
-<li>Cleaning, organizing, aggregating, and analyzing both spatial and non-spatial data</li>
-<li>Creating visualization of spatial data in R</li>
-<li>Creating reproducible code and workflow in R</li>
-<li>Working with large, ‘messy’ government data sets, shape files, and time series data</li>
-<li>Scrapping data from the web</li>
-<li>Working in GitHub repositories<br />
-</li>
-<li>Experienced working with large, ‘messy’ government data sets, shape files, and time series data</li>
-<li>Creating web sites in R using rmarkdown format and hosting by GitHub pages</li>
-<li>Creating shiny dashboard apps</li>
-<li><strong>GIS portfolio:</strong> <a href="https://anguswg-ucsb.github.io/geog176A.html" class="uri">https://anguswg-ucsb.github.io/geog176A.html</a></li>
-</ul></li>
-<li>Proficient in Microsoft Word and Excel ##### <strong>Interests:</strong></li>
-<li>I enjoy an active lifestyle (running, biking, swimming, rowing, kayaking), gardening, weeding, drawing, painting, spending time with animals, long walks on the beach</li>
-</ul>
-<p><br> <br></p>
+<p><br> <br> <br></p>
 </div>
 </div>
 <div id="references" class="section level2">
