--- a/projects.html
+++ b/projects.html
@@ -236,7 +236,7 @@ $(document).ready(function () {
 </ul>
 <p><br></p>
 <center>
-<img src="img/covid_shiny_v2.png" />
+<img src="img/covid_dash_2.png" />
 </center>
 <p><br> <br> <br></p>
 </div>
@@ -254,8 +254,8 @@ $(document).ready(function () {
 <p><br><br />
 <br> <br></p>
 </div>
-<div id="usgs-groundwater-1" class="section level3">
-<h3><strong><a href="https://anguswg-ucsb.github.io/groundwater_2/index.html">USGS Groundwater</a></strong></h3>
+<div id="usgs-groundwater---r-markdown" class="section level3">
+<h3><strong><a href="https://anguswg-ucsb.github.io/groundwater_2/index.html">USGS Groundwater</a> - R Markdown</strong></h3>
 <ul>
 <li><p>R Markdown</p></li>
 <li><p>Groundwater research under <a href="https://www.es.ucsb.edu/debra-perrone">Dr. Perrone</a></p></li>
@@ -296,7 +296,8 @@ $(document).ready(function () {
 <h3><strong><a href="https://anguswg-ucsb.github.io/geog-176A-labs/lab-02.html">COVID-19 Pandemic - Data Wrangling</a></strong></h3>
 <ul>
 <li><p>R Markdown</p></li>
-<li><p>Identical data and research shown in the COVID-19 Shiny dashboard project but written up in an rmarkdown document and deployed using GitHub Pages</p></li>
+<li><p>I calculated the adjusted case rate, the number of new COVID-19 cases per 100,000 residents over a 7 day period, which the California government uses as a risk level criteria. I then created a county level choropleth map of California detailing county risk levels.</p></li>
+<li><p>Maps and plots written up in an rmarkdown document and deployed using GitHub Pages</p></li>
 <li><p>Data source: <a href="https://github.com/nytimes/covid-19-data">New York Times</a></p></li>
 </ul>
 <p><br></p>
