--- a/projects.html
+++ b/projects.html
@@ -225,12 +225,25 @@ $(document).ready(function () {
 
 
 <hr />
+<div id="national-water-model" class="section level3">
+<h3><strong><a href="https://angus-watters.shinyapps.io/nwmHistoric/">National Water Model</a></strong></h3>
+<ul>
+<li><p>Built using R-Shiny flexdashboard</p></li>
+<li><p>On-call shiny app for data exploration</p></li>
+<li><p>Facilitates access to NOAA National Water Model reanalysis data through a convenient Shiny GUI.</p></li>
+<li><p>Data source: <a href="https://water.noaa.gov/about/nwm">NOAA</a></p></li>
+</ul>
+<p><br></p>
+<center>
+<img src="img/nwm_shiny.png" />
+</center>
+<p><br> <br> <br></p>
+</div>
 <div id="covid-19" class="section level3">
 <h3><strong><a href="https://angus-watters.shinyapps.io/covid-dashboard/">COVID-19</a></strong></h3>
 <ul>
 <li><p>Built using R-Shiny dashboard</p></li>
 <li><p>Tracking the COVID-19 pandemic in the United States</p></li>
-<li><p>Built using R-Shiny dashboard</p></li>
 <li><p>Independent project</p></li>
 <li><p>Data source: <a href="https://github.com/nytimes/covid-19-data">New York Times</a></p></li>
 </ul>
