--- a/index.html
+++ b/index.html
@@ -322,18 +322,17 @@ div.tocify {
 </div>
 
 
-<div id="about-me" class="section level1">
-<h1>About me</h1>
+<div id="angus-watters" class="section level1">
+<h1>ANGUS WATTERS</h1>
 <hr />
-<div id="my-name-is-angus-watters-welcome-to-my-website" class="section level3">
-<h3><strong>My name is Angus Watters, welcome to my website!</strong></h3>
-<p><br></p>
-<p>I am a senior at the University of California, Santa Barbara. I am majoring in Geography with an emphasis on GIS and I expect to graduate in the Spring of 2021. I am able to code in both Python and R. Within R I am proficient in cleaning, organizing, and analyzing spatial and non-spatial data. I am currently most interested in working in the field of water resources and environmental conservation, but I keep an open mind with the primary goal to continue growing.</p>
+<div id="welcome-to-my-website" class="section level3">
+<h3><strong>Welcome to my website!</strong></h3>
+<p>My name is Angus Watters. I am a senior at the University of California, Santa Barbara. I am majoring in Geography with an emphasis on GIS and I expect to graduate in the Spring of 2021. I am able to code in both Python and R. Within R I am proficient in cleaning, organizing, and analyzing spatial and non-spatial data. I am currently most interested in working in the field of water resources and environmental conservation, but I keep an open mind with the primary goal to continue growing.</p>
 <p>As I near graduation, I am searching for opportunities where I can both apply and improve my skills in cleaning, organizing, and analyzing spatial and non-spatial data. I hope to find a position which matches my interest in environmental conservation, resource management, and data curation.</p>
 <p>In my free time I enjoy spending time running, biking, drawing, gardening, and cooking.</p>
 <hr />
 <div id="email-adwattersgrubsteinumail.ucsb.edu-github-httpsgithub.comanguswg-ucsb" class="section level4">
-<h4><strong><code>Email: adwattersgrubstein@umail.ucsb.edu</code></strong><br><strong><code>GitHub: https://github.com/anguswg-ucsb</code></strong></h4>
+<h4><strong><code>Email:</code> </strong><a href="mailto:adwattersgrubstein@umail.ucsb.edu" class="email">adwattersgrubstein@umail.ucsb.edu</a><strong><br> <br> <code>GitHub:</code> <a href="https://github.com/anguswg-ucsb" class="uri">https://github.com/anguswg-ucsb</a></strong></h4>
 <p><br></p>
 <center>
 <img src="UCSB-about-me.jpg" />
