add ffball shiny proj

--- a/projects.html
+++ b/projects.html
@@ -253,6 +253,20 @@ $(document).ready(function () {
 </center>
 <p><br> <br> <br></p>
 </div>
+<div id="fantasy-football-player-analysis" class="section level3">
+<h3><strong><a href="https://angus-watters.shinyapps.io/ffball/?_ga=2.46140647.1560190175.1616704255-1187783417.1609440081">Fantasy football player analysis</a></strong></h3>
+<ul>
+<li><p>Built using R-Shiny flexdashboard</p></li>
+<li><p>A dashboard that allows the user to view NFL player data from the last 20 NFL seasons and explore various fantasy football advanced metrics</p></li>
+<li><p>Independent project, work in progress</p></li>
+<li><p>NFL webscraping data obtained through <a href="https://github.com/mrcaseb/nflfastR">nflfasrR package created by mrcaseb</a></p></li>
+</ul>
+<p><br></p>
+<center>
+<img src="img/ffball_shiny.png" />
+</center>
+<p><br> <br> <br></p>
+</div>
 <div id="usgs-groundwater" class="section level3">
 <h3><strong><a href="https://angus-watters.shinyapps.io/groundwater-dash/">USGS Groundwater</a></strong></h3>
 <ul>
