water use project

--- a/projects.html
+++ b/projects.html
@@ -225,6 +225,20 @@ $(document).ready(function () {
 
 
 <hr />
+<div id="nwis-water-use" class="section level3">
+<h3><strong><a href="https://angus-watters.shinyapps.io/WaterUse/?_ga=2.243022978.1093189296.1618237032-1187783417.1609440081">NWIS Water use</a></strong></h3>
+<ul>
+<li><p>Built using R-Shiny flexdashboard</p></li>
+<li><p>On-call shiny app for US water sector withdrawals by county</p></li>
+<li><p>Accesses and visualizes NWIS Water use data in a Shiny GUI.</p></li>
+<li><p>Data source: <a href="https://waterdata.usgs.gov/nwis/wu">USGS</a></p></li>
+</ul>
+<p><br></p>
+<center>
+<img src="img/water_use.png" />
+</center>
+<p><br> <br> <br></p>
+</div>
 <div id="national-water-model-under-construction" class="section level3">
 <h3><strong><a href="https://angus-watters.shinyapps.io/nwmHistoric/">National Water Model</a></strong> <strong>( UNDER CONSTRUCTION )</strong></h3>
 <ul>
