--- a/projects.html
+++ b/projects.html
@@ -254,7 +254,7 @@ $(document).ready(function () {
 <p><br> <br> <br></p>
 </div>
 <div id="covid-19" class="section level3">
-<h3><strong><a href="https://angus-watters.shinyapps.io/covid-dashboard/">COVID-19</a></strong></h3>
+<h3><strong><a href="https://angus-watters.shinyapps.io/covid-tracker/?_ga=2.209713810.1652100718.1619291563-1187783417.1609440081">COVID-19</a></strong></h3>
 <ul>
 <li><p>Built using R-Shiny dashboard</p></li>
 <li><p>Tracking the COVID-19 pandemic in the United States</p></li>
@@ -263,7 +263,7 @@ $(document).ready(function () {
 </ul>
 <p><br></p>
 <center>
-<img src="img/covid_dash_2.png" />
+<img src="img/covid_tracker.png" />
 </center>
 <p><br> <br> <br></p>
 </div>
