added cdsspy package to projects

--- a/projects.html
+++ b/projects.html
@@ -303,16 +303,20 @@ style="width:25.0%" /></p></li>
 <p><br> <br> <br> <br></p>
 <hr />
 </div>
-<div id="cdssr" class="section level3">
+<div id="cdssr-cdsspy" class="section level3">
 <h3><a
-href="https://github.com/anguswg-ucsb/cdssr"><strong>cdssr</strong></a></h3>
+href="https://github.com/anguswg-ucsb/cdssr"><strong>cdssr</strong></a>
++ <a
+href="https://github.com/anguswg-ucsb/cdsspy"><strong>cdsspy</strong></a></h3>
 <ul>
-<li><p>A R package for exploring and requesting resources from the <a
+<li><p><strong>R (cdssr)</strong> and <strong>Python (cdsspy)</strong>
+packages for exploring and requesting resources from the <a
 href="https://dwr.state.co.us/Rest/GET/Help">CDSS REST API</a>.</p></li>
-<li><p>Author and maintainer</p></li>
-<li><p><a href="https://anguswg-ucsb.github.io/cdssr/">Package
+<li><p><a href="https://anguswg-ucsb.github.io/cdssr/">cdssr
 vignette</a></p></li>
-<li><p><a href="https://dwr.state.co.us/Tools">CDSS</a>
+<li><p><a href="https://pypi.org/project/cdsspy/">cdsspy
+PyPI</a></p></li>
+<li><p>Author and maintainer
 <img src="img/cdss_logo2.png" align="right" width="50%"/></p></li>
 </ul>
 <p><br> <br> <br> <br> <br></p>
